hphp/hack/test/typecheck/nullsafe/nullsafe-call-5.php.exp
File "nullsafe-call-5.php", line 14, characters 25-27:
You are trying to access the member bar but this object can be null.  (Typing[4064])
File "nullsafe-call-5.php", line 14, characters 10-22:
This is what makes me believe it can be null (use of ?-> operator)
